--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="A fast and reliable Mode testnet faucet for blockchain developers."
+      content="A fast and reliable Arbitrum testnet faucet for blockchain developers."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/arbitrum-arb-logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
